# vst3-lld-crash

./: CMakeLists.txt  main.cpp
